--- a/angular.json
+++ b/angular.json
@@ -56,6 +56,7 @@
           },
           "defaultConfiguration": "production"
         },
+        "proxyConfig": "src/proxy.conf.json",
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
